# image-server

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
container/roort/etc/services.d/python/: run
nginx/: default.conf
sql/: init.sql
src/image_server/: alembic.ini  main.py
src/image_server/alembic/: README  env.py
src/image_server/api/: products.py
src/image_server/db/: session.py
src/image_server/db/models/: product.py
src/image_server/schema/: product.py
src/image_server/service/: product.py
