[tool.poetry]
name = "image-server"
version = "0.1.0"
description = ""
authors = ["Alexandra Ispas <aispas@adobe.com>"]
readme = "README.md"
packages = [{include = "image_server", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
